# etfc

./: .gitignore  README.md  pyproject.toml
etfc/: __main__.py  cache.py  comparator.py  datapull.py  interface.py
