[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "etfc"
authors = [
    {name = "GoodCoderXD", email = "dont_contact@me.com"},
]
description = "Compare two ETF holdings."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click==8.1.7",
    "textual==0.42.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "pandas==2.1.3",
]
version = "0.0.1"


[tool.setuptools.packages.find]
include = ["etfc"]

[project.scripts]
etfc = "etfc.__main__:etfc"
